unpackaged/main/default/objects/Client_Support_Ticket__c/Client_Support_Ticket__c.object-meta.xml
<CustomObject>
    <description>NCM Client Support ticketing object</description>
    <label>Client Case</label>
    <nameField>
        <label>Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>