unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Address_City__c.field-meta.xml
<CustomField>
    <fullName>Address_City__c</fullName>
    <label>Address City</label>
    <length>64</length>
    <type>Text</type>
</CustomField>