unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Address_Country__c.field-meta.xml
<CustomField>
    <fullName>Address_Country__c</fullName>
    <label>Address Country</label>
    <length>64</length>
    <type>Text</type>
</CustomField>