unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Address_State__c.field-meta.xml
<CustomField>
    <fullName>Address_State__c</fullName>
    <label>Address State</label>
    <length>64</length>
    <type>Text</type>
</CustomField>