unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Address_Zip__c.field-meta.xml
<CustomField>
    <fullName>Address_Zip__c</fullName>
    <label>Address Zip</label>
    <length>16</length>
    <type>Text</type>
</CustomField>