unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Alert_1_Sent__c.field-meta.xml
<CustomField>
    <fullName>Alert_1_Sent__c</fullName>
    <description>The 35 day automatic Collection Activity email has been sent.</description>
    <label>Past Due 35 Sent</label>
    <type>Date</type>
</CustomField>