unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Alert_2_Sent__c.field-meta.xml
<CustomField>
    <fullName>Alert_2_Sent__c</fullName>
    <description>The 45 day automatic Collection Activity email has been sent.</description>
    <label>Past Due 45 Sent</label>
    <type>Date</type>
</CustomField>