unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Alert_3_Sent__c.field-meta.xml
<CustomField>
    <fullName>Alert_3_Sent__c</fullName>
    <description>The 60 day automatic Collection Activity email has been sent.</description>
    <label>Past Due 60 Sent</label>
    <type>Date</type>
</CustomField>