unpackaged/main/default/objects/Client_Support_Ticket__c/fields/axcessa_Disconnect__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Disconnect__c</fullName>
    <label>axcessa Disconnect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>axcessa_Disconnect</valueSetName>
    </valueSet>
</CustomField>