unpackaged/main/default/objects/Client_Support_Ticket__c/fields/axcessa_Group__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>axcessa Group</label>
    <referenceTo>axcessa_Group__c</referenceTo>
    <relationshipName>Client_Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>