unpackaged/main/default/objects/Client_Support_Ticket__c/fields/axcessa_Store__c.field-meta.xml
<CustomField>
    <fullName>axcessa_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>axcessa Store</label>
    <referenceTo>axcessa_Platform_Engagement__c</referenceTo>
    <relationshipName>Client_Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>