unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason (Deprecated)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buy/Sell</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Low Usage</fullName>
            </value>
            <value>
                <fullName>Price Increase / DRF</fullName>
            </value>
            <value>
                <fullName>Reynolds Ownership</fullName>
            </value>
            <value>
                <fullName>Unable to Install</fullName>
            </value>
            <value>
                <fullName>Covid-19</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>