unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Cancellation_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason_Detail__c</fullName>
    <label>Disconnect Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>