unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Case_Link__c.field-meta.xml
<CustomField>
    <fullName>Case_Link__c</fullName>
    <formula>&quot;/&quot; &amp;  Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Link</label>
    <type>Text</type>
</CustomField>