unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Client_Case__c.field-meta.xml
<CustomField>
    <fullName>Client_Case__c</fullName>
    <displayFormat>CS-{0000000}</displayFormat>
    <inlineHelpText>System generated case number</inlineHelpText>
    <label>Case #</label>
    <type>AutoNumber</type>
</CustomField>