unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Client_Case_Id_18__c.field-meta.xml
<CustomField>
    <fullName>Client_Case_Id_18__c</fullName>
    <formula>CASESAFEID( Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Case Id (18)</label>
    <type>Text</type>
</CustomField>