unpackaged/main/default/objects/Client_Support_Ticket__c/fields/CM_Id__c.field-meta.xml
<CustomField>
    <fullName>CM_Id__c</fullName>
    <label>CM Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>