unpackaged/main/default/objects/Client_Support_Ticket__c/fields/CM_Object_Code__c.field-meta.xml
<CustomField>
    <fullName>CM_Object_Code__c</fullName>
    <label>CM Object (Code)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>