unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Cohort_Student__c.field-meta.xml
<CustomField>
    <fullName>Cohort_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cohort Student</label>
    <referenceTo>Cohort_Student__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>