unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The client contact that should be consulted regarding this issue, if not populated then populate the lower fields to automatically create a Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Cases (Contact)</relationshipLabel>
    <relationshipName>Client_Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>