unpackaged/main/default/objects/Client_Support_Ticket__c/fields/CreatedByName__c.field-meta.xml
<CustomField>
    <fullName>CreatedByName__c</fullName>
    <formula>CreatedBy.FirstName &amp; &quot; &quot; &amp;  CreatedBy.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedByName</label>
    <type>Text</type>
</CustomField>