unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Disconnect_Detail__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Detail__c</fullName>
    <label>Disconnect Detail</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancel_and_Disconnect_Details</valueSetName>
    </valueSet>
</CustomField>