unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Disconnect_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Reason__c</fullName>
    <label>Disconnect Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cancel_and_Disconnect_Reasons</valueSetName>
    </valueSet>
</CustomField>