unpackaged/main/default/objects/Client_Support_Ticket__c/fields/DMS__c.field-meta.xml
<CustomField>
    <fullName>DMS__c</fullName>
    <label>DMS</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DMS</valueSetName>
    </valueSet>
</CustomField>