unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Echo_Group__c.field-meta.xml
<CustomField>
    <fullName>Echo_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Echo Group</label>
    <referenceTo>Echo_Group__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>