unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Echo_Store__c.field-meta.xml
<CustomField>
    <fullName>Echo_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Echo Store</label>
    <referenceTo>Echo_Store__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>