unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Engagement_Attendee__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Attendee</label>
    <referenceTo>Engagement_Attendee__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>