unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Healthcheck_Instance__c.field-meta.xml
<CustomField>
    <fullName>Healthcheck_Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcheck Instance</label>
    <referenceTo>Healthcheck_Instance__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>