unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Initial_POC__c.field-meta.xml
<CustomField>
    <fullName>Initial_POC__c</fullName>
    <label>Initial POC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Point_of_Contact</valueSetName>
    </valueSet>
</CustomField>