unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Issue__c.field-meta.xml
<CustomField>
    <fullName>Issue__c</fullName>
    <defaultValue>&#39;General Engagement&#39;</defaultValue>
    <inlineHelpText>The issue Category that this should be grouped in</inlineHelpText>
    <label>Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Billing Issue</fullName>
            </value>
            <value>
                <fullName>General Engagement</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Member on hold</fullName>
            </value>
            <value>
                <fullName>Member removed from On Hold</fullName>
            </value>
            <value>
                <fullName>Member Disconnect</fullName>
            </value>
            <value>
                <fullName>Reverse Risk</fullName>
            </value>
            <value>
                <fullName>Complaint</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Welcome Email</fullName>
            </value>
            <value>
                <fullName>Mobile App Inquiry</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>MFA</fullName>
            </value>
            <value>
                <fullName>Commendation</fullName>
            </value>
            <value>
                <fullName>Account Mapping</fullName>
            </value>
            <value>
                <fullName>Client Engagement</fullName>
            </value>
            <value>
                <fullName>Dev Modification Request</fullName>
            </value>
            <value>
                <fullName>User Management</fullName>
            </value>
            <value>
                <fullName>Candidate Rejection</fullName>
            </value>
            <value>
                <fullName>DMS Issue</fullName>
                <isActive>false</isActive>
                <label>DMS Issue</label>
            </value>
            <value>
                <fullName>Data Incorrect</fullName>
                <isActive>false</isActive>
                <label>Data Incorrect</label>
            </value>
            <value>
                <fullName>Data Installation</fullName>
                <isActive>false</isActive>
                <label>Data Installation</label>
            </value>
            <value>
                <fullName>Leads</fullName>
                <isActive>false</isActive>
                <label>Leads</label>
            </value>
            <value>
                <fullName>Setup</fullName>
                <isActive>false</isActive>
                <label>Setup</label>
            </value>
            <value>
                <fullName>System Down</fullName>
                <isActive>false</isActive>
                <label>System Down</label>
            </value>
            <value>
                <fullName>Utilization</fullName>
                <isActive>false</isActive>
                <label>Utilization</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>