unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Level_of_Engagment__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Engagment__c</fullName>
    <inlineHelpText>Rate the level of engagement the client expressed: 1-Tuned Out, 3-Somewhat Engaged, 5-Enraptured</inlineHelpText>
    <label>Level of Engagment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Star_Rating</valueSetName>
    </valueSet>
</CustomField>