unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Mobile_Disconnect_Notes__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Disconnect_Notes__c</fullName>
    <label>Mobile Disconnect Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>