unpackaged/main/default/objects/Client_Support_Ticket__c/fields/NCM_Products_and_Services__c.field-meta.xml
<CustomField>
    <fullName>NCM_Products_and_Services__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The product or service that is experiencing this issue (i.e. axcessa, Healthcheck, 20 Group, Proprietary, Classes)</inlineHelpText>
    <label>NCM Products and Services</label>
    <referenceTo>NCM_Products_and_Services__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Support_Tickets</relationshipName>
    <type>Lookup</type>
</CustomField>