unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Number_of_Activities__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Activities__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Number of Activities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>