unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Proactive_Reactive__c.field-meta.xml
<CustomField>
    <fullName>Proactive_Reactive__c</fullName>
    <inlineHelpText>Was this case created Proactively or Reactively?</inlineHelpText>
    <label>Proactive / Reactive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Proactive</fullName>
                <color>#78C953</color>
                <label>Proactive</label>
            </value>
            <value>
                <fullName>Reactive</fullName>
                <color>#A53711</color>
                <label>Reactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>