unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Proprietary_Master_Group__c.field-meta.xml
<CustomField>
    <fullName>Proprietary_Master_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proprietary Master Group</label>
    <referenceTo>Proprietary_Master_Group__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>