unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <inlineHelpText>The resolution category that solved this issue</inlineHelpText>
    <label>Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting Correction</fullName>
            </value>
            <value>
                <fullName>Reynolds Issue</fullName>
            </value>
            <value>
                <fullName>Training Needed</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>