unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Reynolds_Support_Ticket_Id__c.field-meta.xml
<CustomField>
    <fullName>Reynolds_Support_Ticket_Id__c</fullName>
    <label>Reynolds Support Ticket Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>