unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Send_Disconnect_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Disconnect_Notification__c</fullName>
    <label>Send Disconnect Notification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>