unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Send_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Survey__c</fullName>
    <label>Send Survey?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>