unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Setup_Complete__c.field-meta.xml
<CustomField>
    <fullName>Setup_Complete__c</fullName>
    <label>Setup Complete</label>
    <type>Date</type>
</CustomField>