unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Signer__c.field-meta.xml
<CustomField>
    <fullName>Signer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Signer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Client Cases (Signer)</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>