unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Signer_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Signer_Last_Name__c</fullName>
    <label>Signer Last Name</label>
    <length>64</length>
    <type>Text</type>
</CustomField>