unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Signer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Signer_Phone__c</fullName>
    <label>Signer Phone</label>
    <type>Phone</type>
</CustomField>