unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Steps_Towards_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Steps_Towards_Resolution__c</fullName>
    <inlineHelpText>The steps that have been attempted with the client to resolve the issue</inlineHelpText>
    <label>Steps Towards Resolution</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>