unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <label>Store Name</label>
    <length>52</length>
    <type>Text</type>
</CustomField>