unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <inlineHelpText>A title or short summary for the issue at hand</inlineHelpText>
    <label>Case Subject</label>
    <length>60</length>
    <type>Text</type>
</CustomField>