unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Training_Complete__c.field-meta.xml
<CustomField>
    <fullName>Training_Complete__c</fullName>
    <label>Training Complete</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Show</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>