unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Training_Credit__c.field-meta.xml
<CustomField>
    <fullName>Training_Credit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Credit</label>
    <referenceTo>Training_Credit__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>