unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Training_Notes__c.field-meta.xml
<CustomField>
    <fullName>Training_Notes__c</fullName>
    <label>Training Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>