unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Training_Scheduled_for__c.field-meta.xml
<CustomField>
    <fullName>Training_Scheduled_for__c</fullName>
    <label>Training Scheduled for</label>
    <type>DateTime</type>
</CustomField>