unpackaged/main/default/objects/Client_Support_Ticket__c/fields/Training_Subscription_Term__c.field-meta.xml
<CustomField>
    <fullName>Training_Subscription_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Training Subscription Term</label>
    <referenceTo>Training_Subscription_Term__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>