unpackaged/main/default/objects/Client_Support_Ticket__c/fields/TS_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>TS_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/apex/APXTConga4__Conga_Composer?ServerURL=&quot;+ $Api.Partner_Server_URL_520 +  CA_45_Days_URL__c ,&quot;Test Conga Trigger via User Interface&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TS Hyperlink</label>
    <type>Text</type>
</CustomField>