unpackaged/main/default/objects/Client_Support_Ticket__c/fields/X20_Group_Member_Account__c.field-meta.xml
<CustomField>
    <fullName>X20_Group_Member_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Group Member Account</label>
    <referenceTo>X20_Groups_Member__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>