unpackaged/main/default/objects/Client_Support_Ticket__c/fields/X20_Groups__c.field-meta.xml
<CustomField>
    <fullName>X20_Groups__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>20 Groups</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>Client Cases</relationshipLabel>
    <relationshipName>Client_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>