unpackaged/main/default/objects/Client_Support_Ticket__c/recordTypes/axcessa_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>axcessa_Cancellation</fullName>
    <active>true</active>
    <description>Case that captures a cancellation and also generates an email to Reynolds.</description>
    <label>axcessa Cancellation</label>
</RecordType>