unpackaged/main/default/objects/Client_Support_Ticket__c/recordTypes/axcessa_Engagement.recordType-meta.xml
<RecordType>
    <fullName>axcessa_Engagement</fullName>
    <active>true</active>
    <description>The default Case for general trouble tracking.</description>
    <label>axcessa Engagement</label>
</RecordType>