unpackaged/main/default/objects/Client_Support_Ticket__c/recordTypes/axcessa_Group_Cancellation.recordType-meta.xml
<RecordType>
    <fullName>axcessa_Group_Cancellation</fullName>
    <active>true</active>
    <label>axcessa Group Cancellation</label>
</RecordType>